fix the gap again

--- a/styles/pages/signUpSuccess.module.scss
+++ b/styles/pages/signUpSuccess.module.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     text-align: center;
     height: 140vh;
-    gap: 250px;
+    gap: 130px;
     background: url('../../public/assets/images/noise.png'),
     -webkit-linear-gradient(linear-gradient(45deg, #ffff003b, #be34547c, #be3454c2, #BE3455));
     background: 
